--- a/app/views/pages/_crunchbase_form.html.erb
+++ b/app/views/pages/_crunchbase_form.html.erb
@@ -1,6 +1,8 @@
 <div id="crunchbase-search">
   <span class="user-header">Add CrunchAlert</span>
   <div id="wait"><%= image_tag("loader.gif", :alt => "loader") %></div>
+  <div id="cbase-error"></div>
+  <div id="message-error"></div>
   <form id="form-crunchbase" method="post" name="crunchbase">
     <div id="crunchbase-name">
       <span style="font-weight: bold">CrunchBase name:</span> <input id='crunchbase' type='text' title='enter a crunchbase profile name' name='crunchbase' />
