--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,5 +1,8 @@
 <div id="forget">
   <%= form_for(:forgot_password, :url => forgot_password_path) do |f| %>
+  <% flash.each do |key, value| %>
+  <div class="flash <%= key %>"><%= value %></div>
+  <% end %>
   <div id="new-pass">Submit your email to receive a new password:</div>
   <div class="user">
     <%= text_field "user", "email", :title => "enter your email address" %>
