--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,19 +6,19 @@
   <%= render 'shared/error_messages' %>
   <fieldset class="user">
     <legend>Sign up to CrunchAlert</legend>
-    <div>
+    <div class="user-register">
       <%= f.label :email %>
       <%= f.text_field :email, :title => 'enter your email address' %>
     </div>
-    <div>
+    <div class="user-register">
       <%= f.label :password, 'Password' %>
       <%= f.password_field :password  %>
     </div>
-    <div>
+    <div class="user-register">
       <%= f.label :password_confirmation, 'Confirm' %>
       <%= f.password_field :password_confirmation %>
     </div>
-    <div>
+    <div class="user-register">
       <%= f.submit "Register", :class => "submit" %>
     </div>
   </fieldset>
